# pinn-sfr-transient

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: neural_network.md  physics_theory.md  references.bib  references.md  usage.md
notebooks/: 01_ulof_walkthrough.ipynb  02_safety_map.ipynb
src/pinn_sfr_transient/: __init__.py  cli.py  config.py  figures.py  physics.py  pinn_deepxde.py  pinn_jax.py  pinn_torch.py  plotting.py  reference.py
tests/: test_cli.py  test_consistency.py  test_figures.py  test_physics.py  test_pinn_jax.py  test_pinn_torch.py
